<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>chat-adapter-war</artifactId>
	<packaging>war</packaging>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<excludes>
						<exclude>**/IT*.java</exclude>
						<exclude>**/*IT.java</exclude>
						<exclude>**/*ITCase.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.wildfly.plugins</groupId>
				<artifactId>wildfly-maven-plugin</artifactId>
				<version>1.0.1.Final</version>
				<configuration>
					<jboss-home>${wildfly.home}</jboss-home>
					<modules-path>${wildfly.home}/modules</modules-path>
					<jvm-args>-Xms64m -Xmx512m -XX:MaxPermSize=256m
						-Djava.net.preferIPv4Stack=true
						-Djboss.server.base.dir=${wildfly.home}/standalone</jvm-args>
					<port>${wildfly.port}</port>
				</configuration>
				<executions>
					<execution>
						<id>wildfly-run</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>start</goal>
							<goal>deploy</goal>
						</goals>
						<configuration>
							<name>${app.name}</name>
						</configuration>
					</execution>
					<execution>
						<id>wildfly-stop</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>undeploy</goal>
							<goal>shutdown</goal>
						</goals>
						<configuration>
							<name>${app.name}</name>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<properties>
		<app.name>chat-adapter-war.war</app.name>
	</properties>
	<repositories>
		<repository>
			<id>nexus</id>
			<name>Nexus Repository</name>
			<url>http://nexus.bbank.it:8081/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>mavencentral</id>
			<name>Maven Central</name>
			<url>http://repo1.maven.org/maven2/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>mulesoft-releases</id>
			<name>MuleSoft Releases Repository</name>
			<url>https://repository-master.mulesoft.org/releases/</url>
		</repository>
	</repositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.buddybank.api</groupId>
				<artifactId>buddy-api-bom</artifactId>
				<version>0.0.4-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
		</dependency>
		<dependency>
			<groupId>com.buddybank.api</groupId>
			<artifactId>buddy-api-spi</artifactId>
		</dependency>
		<dependency>
			<groupId>com.mashape.unirest</groupId>
			<artifactId>unirest-java</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
		</dependency>
	</dependencies>
	<parent>
		<groupId>com.buddybank.chatadapter</groupId>
		<artifactId>chat-adapter</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../chat-adapter</relativePath>
	</parent>
</project>